--- a/style.css
+++ b/style.css
@@ -94,9 +94,17 @@ i{
     color: white;
 }
 .view{
-    height:100px;
-    width: 200px;
-    margin-left: 500px;
+    height: 50px;
+    width: 150px;
+    margin-left: 600px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: blue;
+    border: 0;
+    color: white;
+    text-transform: capitalize;
+    font-size: 21px;
+    border-radius: 6px;
 }
 
 
